Quick fix small spacing issue on dashboard

--- a/src/modules/Dashboard/components/_Dashboard.scss
+++ b/src/modules/Dashboard/components/_Dashboard.scss
@@ -61,8 +61,6 @@
     margin: 24px 0 -12px 24px !important;
     height: 60px !important;
     .researchIdAvatar {
-      margin-right: 12px;
-      box-shadow: 0 0 15px rgba(black, 0.3);
       background-color: transparent !important;
       &:hover {
         cursor: pointer;
